--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -1,12 +1,18 @@
 _target_: pytorch_lightning.Trainer
 
-gpus: 0
+gpus: "0,1,2,3"
 
 min_epochs: 1
 max_epochs: 10
+precision: 16
+plugins:
+  _target_: pytorch_lightning.plugins.DDPPlugin
+  find_unused_parameters: True
 
 # number of validation steps to execute at the beginning of the training
 # num_sanity_val_steps: 0
 
 # ckpt path
 resume_from_checkpoint: null
+#deterministic: True
+
