--- a/configs/datamodule/colon.yaml
+++ b/configs/datamodule/colon.yaml
@@ -1,7 +1,8 @@
 _target_: src.datamodules.colon_datamodule.ColonDataModule
 
 data_dir: ${data_dir} # data_dir is specified in config.yaml
-batch_size: 16
+batch_size: 2
 num_workers: 4
-pin_memory: False
+pin_memory: True
 img_size: 384
+drop_last: False
