--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,21 @@ flake8          # code analysis
 nbstripout      # remove output from jupyter notebooks
 
 # --------- others --------- #
-python-dotenv   # loading env variables from .env file
-rich            # beautiful text formatting in terminal
-pytest          # tests
-sh              # for running bash commands in some tests
+python-dotenv~=0.19.2
+rich~=11.0.0
+pytest~=6.2.5
+sh~=1.14.2
 pudb            # debugger
+
+pandas~=1.3.5
+omegaconf~=2.1.1
+timm~=0.5.5
+numpy~=1.22.0
+scipy~=1.7.3
+matplotlib~=3.5.1
+seaborn~=0.11.2
+wandb~=0.12.14
+scikit-learn~=1.0.2
+albumentations~=1.1.0
+opencv-python~=4.5.5.62
+packaging~=21.3
