--- a/configs/datamodule/gastric.yaml
+++ b/configs/datamodule/gastric.yaml
@@ -1,4 +1,4 @@
-_target_: src.datamodules.colon_datamodule.ColonDataModule
+_target_: src.datamodules.gastric_datamodule.GastricDataModule
 
 data_dir: ${data_dir} # data_dir is specified in config.yaml
 batch_size: 16
