--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -11,7 +11,7 @@ defaults:
   - log_dir: default.yaml
 
   # experiment configs allow for version control of specific configurations
-  # e.g. best hyperparameters for each combination of model and datamodule
+  # e.g. the best hyperparameters for each combination of model and datamodule
   - experiment: null
 
   # debugging config (enable through command line, e.g. `python train.py debug=default)
