--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -10,10 +10,9 @@ precision: 16
 #  find_unused_parameters: True
 strategy: 'ddp'
 accelerator: 'gpu'
-devices: '4,5'
-#num_sanity_val_steps: 0
+devices: '2,3'
+num_sanity_val_steps: 0
 # number of validation steps to execute at the beginning of the training
-# num_sanity_val_steps: 0
 
 # ckpt path
 resume_from_checkpoint: null
