--- a/configs/datamodule/colonall_feature.yaml
+++ b/configs/datamodule/colonall_feature.yaml
@@ -1,4 +1,4 @@
-_target_: src.datamodules.gastric_datamodule.GastricDataModule
+_target_: src.datamodules.feature_datamodule.ColonAllDataModule
 
 data_dir: ${data_dir} # data_dir is specified in config.yaml
 batch_size: 16
@@ -6,5 +6,4 @@ num_workers: 0
 pin_memory: True
 img_size: 384
 drop_last: False
-data_name: 'gastric'
-data_ratio: 1.0
+data_name: 'colon'
