--- a/configs/log_dir/evaluation.yaml
+++ b/configs/log_dir/evaluation.yaml
@@ -2,7 +2,7 @@
 
 hydra:
   run:
-    dir: logs/evaluations/runs/${name}/${now:%Y-%m-%d}_${now:%H-%M-%S}
+    dir: logs/evaluations/runs/${datamodule.data_name}/${model.module_type}/${model.name}/${now:%Y-%m-%d}_${now:%H-%M-%S}
   sweep:
-    dir: logs/evaluations/multiruns/${name}/${now:%Y-%m-%d}_${now:%H-%M-%S}
+    dir: logs/evaluations/multiruns/${datamodule.data_name}/${model.module_type}/${model.name}/${now:%Y-%m-%d}_${now:%H-%M-%S}
     subdir: ${hydra.job.num}
