--- a/configs/logger/wandb.yaml
+++ b/configs/logger/wandb.yaml
@@ -2,7 +2,7 @@
 
 wandb:
   _target_: pytorch_lightning.loggers.wandb.WandbLogger
-  project: "colon"
+  project: "colon_new"
   name: ${name}
   save_dir: "."
   offline: False # set True to store all logs only locally
