--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,8 +4,8 @@
 defaults:
   - _self_
   - datamodule: colon.yaml
-  - model: colon.yaml
-  - callbacks: wandb.yaml
+  - model: classify4.yaml
+  - callbacks: default.yaml
   - logger: wandb.yaml # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default.yaml
   - log_dir: default.yaml
