--- a/requirements.txt
+++ b/requirements.txt
@@ -1,196 +1,325 @@
-absl-py==1.0.0
+absl-py==1.1.0
 aiohttp==3.8.1
 aiosignal==1.2.0
-albumentations==1.2.0
-alembic==1.6.5
+alabaster==0.7.12
+albumentations==1.2.1
+alembic==1.8.0
 antlr4-python3-runtime==4.8
-anyio==3.5.0
+apex==0.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+arrow==1.2.2
+astroid==2.11.6
+asttokens==2.0.5
+async-generator==1.10
 async-timeout==4.0.2
 attrs==21.4.0
-autopage==0.4.0
-Babel==2.9.1
+autopage==0.5.1
+autopep8==1.6.0
+Babel==2.10.3
 backcall==0.2.0
-black==21.12b0
-bleach==4.1.0
-cachetools==4.2.4
-certifi==2021.10.8
-# cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1636046063618/work
+bagua-cuda113==0.9.0
+base58==2.1.1
+beautifulsoup4==4.11.1
+black==22.3.0
+bleach==5.0.0
+boto3==1.24.15
+botocore==1.27.15
+bravado==11.0.3
+bravado-core==5.17.0
+cachetools==5.2.0
+certifi==2019.11.28
+cffi==1.15.0
 cfgv==3.3.1
-charset-normalizer==2.0.10
-click==8.0.3
-cliff==3.10.0
+chardet==3.0.4
+charset-normalizer==2.0.12
+click==8.1.3
+cliff==3.10.1
+cloudpickle==2.1.0
 cmaes==0.8.2
-cmd2==2.3.3
-colorama==0.4.4
+cmd2==2.4.1
+codecov==2.1.12
+colorama==0.4.5
 colorlog==6.6.0
+comet-ml==3.28.2
 commonmark==0.9.1
-configparser==5.2.0
+ConfigArgParse==1.5.3
+configobj==5.0.6
+coverage==6.4.1
+cryptography==37.0.2
+curio==1.5
 cycler==0.11.0
-debugpy==1.5.1
+databricks-cli==0.17.0
+dbus-python==1.2.16
+debugpy==1.6.0
 decorator==5.1.1
+deepspeed==0.5.10
 defusedxml==0.7.1
+deprecation==2.1.0
+dill==0.3.5.1
 distlib==0.3.4
+docker==5.0.3
 docker-pycreds==0.4.0
-einops==0.4.0
-entrypoints==0.3
-filelock==3.4.2
+docstring-parser==0.14.1
+docutils==0.18.1
+dulwich==0.20.43
+entrypoints==0.4
+everett==3.0.0
+executing==0.8.3
+fairscale==0.4.6
+fastjsonschema==2.15.3
+filelock==3.7.1
+fire==0.4.0
 flake8==4.0.1
-fonttools==4.28.5
-frozenlist==1.2.0
-fsspec==2022.1.0
-# future @ file:///home/conda/feedstock_root/build_artifacts/future_1635819504071/work
+Flask==2.1.2
+flatbuffers==2.0
+fonttools==4.33.3
+fqdn==1.5.1
+frozenlist==1.3.0
+fsspec==2022.2.0
+future==0.18.2
+gcsfs==2022.2.0
+gevent==21.12.0
 gitdb==4.0.9
-GitPython==3.1.26
-google-auth==2.3.3
+GitPython==3.1.27
+google-api-core==2.8.2
+google-auth==2.8.0
 google-auth-oauthlib==0.4.6
+google-cloud-core==2.3.1
+google-cloud-storage==2.4.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.3
+gorilla==0.4.0
 greenlet==1.1.2
-grpcio==1.43.0
+grpcio==1.47.0
+grpcio-tools==1.47.0
+gunicorn==20.1.0
+gym==0.23.1
+gym-notices==0.0.7
+hivemind==1.0.1
+hjson==3.0.2
+horovod==0.24.3
 hydra-colorlog==1.1.0
 hydra-core==1.1.0
-hydra-optuna-sweeper==1.1.2
-identify==2.4.3
-idna==3.3
-imageio==2.13.5
-imgaug==0.4.0
-importlib-metadata==4.10.0
-importlib-resources==5.2.3
+hydra-optuna-sweeper==1.2.0
+identify==2.5.1
+idna==2.8
+imageio==2.19.3
+imagesize==1.3.0
+importlib-metadata==4.11.4
+importlib-resources==5.8.0
 iniconfig==1.1.1
-ipykernel==6.6.1
-ipython==7.31.0
+ipykernel==6.15.0
+ipyparallel==8.4.1
+ipython==8.1.1
 ipython-genutils==0.2.0
+ipywidgets==7.7.1
+isoduration==20.11.0
 isort==5.10.1
+itsdangerous==2.1.2
 jedi==0.18.1
-Jinja2==3.0.3
+Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.1.0
-json5==0.9.6
-jsonschema==4.3.3
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-jupyter-server==1.13.1
-jupyterlab==3.2.6
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.10.3
-kiwisolver==1.3.2
-Mako==1.1.6
-Markdown==3.3.6
-MarkupSafe==2.0.1
-matplotlib==3.5.1
+jsonargparse==4.9.0
+jsonpointer==2.3
+jsonref==0.2
+jsonschema==4.6.0
+jupyter-client==7.3.4
+jupyter-core==4.10.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+keopscore==2.1
+kiwisolver==1.4.3
+kornia==0.6.7
+lazy-object-proxy==1.7.1
+lightkit==0.4.4
+llvmlite==0.38.1
+Mako==1.2.0
+Markdown==3.3.7
+MarkupSafe==2.1.1
+matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 mistune==0.8.4
-msgpack==1.0.3
-multidict==5.2.0
+mlflow==1.26.1
+monotonic==1.6
+msgpack==1.0.4
+multiaddr==0.0.9
+multidict==6.0.2
+mypy==0.961
 mypy-extensions==0.4.3
-nbclassic==0.3.4
-nbclient==0.5.9
-nbconvert==6.4.0
-nbformat==5.1.3
-nbstripout==0.5.0
-nest-asyncio==1.5.4
-networkx==2.6.3
+nbclient==0.6.4
+nbconvert==6.5.0
+nbformat==5.4.0
+neptune-client==0.16.2
+nest-asyncio==1.5.5
+netaddr==0.8.0
+networkx==2.8.4
+ninja==1.10.2.3
 nodeenv==1.6.0
-notebook==6.4.6
-numpy==1.22.3
-oauthlib==3.1.1
-# olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-omegaconf==2.1.1
-opencv-python==4.5.5.62
-opencv-python-headless==4.5.5.62
-optuna==2.10.0
+notebook==6.4.12
+numba==0.55.2
+numpy==1.23.2
+nvidia-dali-cuda110==1.15.0
+nvidia-ml-py3==7.352.0
+oauthlib==3.2.0
+omegaconf==2.1.2
+online-triplet-loss==0.0.6
+onnxruntime==1.11.1
+opencv-python==4.5.5.64
+opencv-python-headless==4.6.0.66
+optuna==2.10.1
+outcome==1.2.0
 packaging==21.3
-pandas==1.3.5
+pandas==1.4.2
 pandocfilters==1.5.0
+parallel-ssh==2.8.0
 parso==0.8.3
 pathspec==0.9.0
 pathtools==0.1.2
-pbr==5.8.0
+pbr==5.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.0.0
-platformdirs==2.4.1
+Pillow==9.1.1
+platformdirs==2.5.2
 pluggy==1.0.0
-pre-commit==2.16.0
-prettytable==3.0.0
-prometheus-client==0.12.0
+pre-commit==2.19.0
+prefetch-generator==1.0.1
+prettytable==3.3.0
+prometheus-client==0.14.1
+prometheus-flask-exporter==0.20.2
 promise==2.3
-prompt-toolkit==3.0.24
-protobuf==3.19.3
-psutil==5.9.0
+prompt-toolkit==3.0.29
+protobuf==3.19.4
+psutil==5.9.1
 ptyprocess==0.7.0
-pudb==2022.1
+pure-eval==0.2.2
 py==1.11.0
+py-cpuinfo==8.0.0
+pyaml==21.10.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pybind11==2.10.0
 pycodestyle==2.8.0
-# pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-pyDeprecate==0.3.1
+pycparser==2.21
+pydantic==1.9.1
+pyDeprecate==0.3.2
 pyflakes==2.4.0
-Pygments==2.11.2
-pyparsing==3.0.6
+pygame==2.1.0
+Pygments==2.12.0
+PyGObject==3.36.0
+PyJWT==2.4.0
+pykeops==2.1
+pylint==2.14.4
+pymultihash==0.8.2
+pynndescent==0.5.7
+pyparsing==3.0.9
 pyperclip==1.8.2
-pyrsistent==0.18.0
-pytest==6.2.5
+pyrsistent==0.18.1
+pytest==7.1.2
+pytest-asyncio==0.18.3
+pytest-benchmark==3.4.1
+pytest-cov==3.0.0
+pytest-forked==1.4.0
+pytest-rerunfailures==10.2
+python-apt==2.0.0+ubuntu0.20.4.7
 python-dateutil==2.8.2
-python-dotenv==0.19.2
-python-editor==1.0.4
-pytorch-lightning==1.6.4
-pytz==2021.3
-PyWavelets==1.2.0
+python-dotenv==0.20.0
+pytorch-lightning==1.6.5
+pytorch-metric-learning==1.5.0
+pytz==2022.1
+PyWavelets==1.3.0
 PyYAML==6.0
-pyzmq==22.3.0
+pyzmq==23.2.0
+qtconsole==5.3.1
+QtPy==2.1.0
 qudida==0.0.4
-# ray==1.12.0
-# ray-lightning==0.2.0
-requests==2.27.1
-requests-oauthlib==1.3.0
-rich
+querystring-parser==1.2.4
+requests==2.28.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+requests-unixsocket==0.2.0
+rfc3339-validator==0.1.4
+rfc3987==1.3.8
+rich==12.5.1
 rsa==4.8
+s3transfer==0.6.0
 scikit-image==0.18.3
-scikit-learn==1.0.2
-scipy==1.7.3
+scikit-learn==1.0.1
+scikit-optimize==0.9.0
+scipy==1.8.1
 seaborn==0.11.2
+semantic-version==2.10.0
 Send2Trash==1.8.0
-sentry-sdk==1.5.2
-setproctitle==1.2.2
-sh==1.14.2
-Shapely==1.8.0
-shortuuid==1.0.8
-six==1.16.0
+sentry-sdk==1.6.0
+setproctitle==1.2.3
+setuptools-rust==1.3.0
+shortuuid==1.0.9
+simplejson==3.17.6
+six==1.14.0
 smmap==5.0.0
 sniffio==1.2.0
-SQLAlchemy==1.4.29
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+Sphinx==5.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.4.37
+sqlparse==0.4.2
+ssh-python==0.10.0
+ssh2-python==0.27.0
+stack-data==0.3.0
 stevedore==3.5.0
-subprocess32==3.5.4
-tensorboard==2.7.0
+swagger-spec-validator==2.7.4
+tabulate==0.8.10
+tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 termcolor==1.1.0
-terminado==0.12.1
-testpath==0.5.0
-threadpoolctl==3.0.0
-tifffile==2021.11.2
-timm @ git+https://github.com/rwightman/pytorch-image-models.git@7c67d6aca992f039eece0af5f7c29a43d48c00e4
+terminado==0.15.0
+test-tube==0.7.5
+testpath==0.6.0
+threadpoolctl==3.1.0
+tifffile==2022.5.4
+timm==0.6.7
+tinycss2==1.1.1
 toml==0.10.2
-tomli==1.2.3
-torch
-torchmetrics
-# -e git+https://github.com/OZOOOOOH/imbalanced-dataset-sampler.git@9c4251e3c078d4db7f4120f447101f878a5215b5#egg=torchsampler
-torchvision
+tomli==2.0.1
+tomlkit==0.11.0
+torch==1.11.0+cu113
+torchmetrics==0.9.3
+torchtext==0.12.0
+torchvision==0.12.0+cu113
 tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-# typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1638334978229/work
-urllib3==1.26.8
-urwid==2.1.2
-urwid-readline==0.13
-virtualenv==20.13.0
-wandb
+tqdm==4.63.0
+traitlets==5.3.0
+trio==0.21.0
+triton==1.0.0
+typing_extensions==4.2.0
+umap-learn==0.5.3
+uri-template==1.2.0
+urllib3==1.25.8
+uvloop==0.16.0
+varint==1.0.2
+virtualenv==20.14.1
+wandb==0.13.2
 wcwidth==0.2.5
+webcolors==1.12
 webencodings==0.5.1
-websocket-client==1.2.3
-Werkzeug==2.0.2
+websocket-client==1.3.3
+Werkzeug==2.1.2
+widgetsnbextension==3.6.1
+wrapt==1.14.1
+wurlitzer==3.0.2
+xxhash==3.0.0
 yarl==1.7.2
-yaspin==2.1.0
-zipp==3.7.0
+zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
